force-app/main/default/objects/VATBank__c/VATBank__c.object-meta.xml
<CustomObject>
    <label>VAT+Bank</label>
    <nameField>
        <displayFormat>VTB-{000000}</displayFormat>
        <label>VAT+BANK ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VAT+Bank</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>