force-app/main/default/objects/VATBank__c/fields/AmountSellingInclTAXForBank__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTAXForBank__c</fullName>
    <label>AMOUNT SELLING INCL TAX-BANK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>