force-app/main/default/objects/VATBank__c/fields/AmountSellingInclTaxFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTaxFormula__c</fullName>
    <formula>VATInvoiceID__r.AmountVATSellingIncludeVAT__c</formula>
    <label>AMOUNT SELLING INCL TAX-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>