force-app/main/default/objects/VATBank__c/fields/AmoutBuyingInclTaxBank__c.field-meta.xml
<CustomField>
    <fullName>AmoutBuyingInclTaxBank__c</fullName>
    <label>AMOUNT BUYING INCL TAX-BANK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>