force-app/main/default/objects/VATBank__c/fields/BankID__c.field-meta.xml
<CustomField>
    <fullName>BankID__c</fullName>
    <label>BANK ID</label>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipLabel>VAT+BANK</relationshipLabel>
    <relationshipName>VATBank</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>