force-app/main/default/objects/VATBank__c/fields/VATInvNo__c.field-meta.xml
<CustomField>
    <fullName>VATInvNo__c</fullName>
    <formula>VATInvoiceID__r.RED_INVOICE_NO__c
&amp;
 VATInvoiceID__r.VATInvoiceNoFromVendor__c</formula>
    <label>VAT INV NO</label>
    <type>Text</type>
</CustomField>