force-app/main/default/objects/VATBank__c/fields/VATInvoiceID__c.field-meta.xml
<CustomField>
    <fullName>VATInvoiceID__c</fullName>
    <label>VAT INVOICE ID</label>
    <referenceTo>VAT_INVOICE__c</referenceTo>
    <relationshipLabel>VAT+BANK</relationshipLabel>
    <relationshipName>VATBank</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>